--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,11 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_filters = direct, esp32_exception_decoder
+build_flags =
+	;-DCONFIG_BT_NIMBLE_ROLE_PERIPHERAL_DISABLED=1
+	-DCONFIG_BT_NIMBLE_ROLE_CENTRAL_DISABLED=1
+	-DCONFIG_BT_NIMBLE_ROLE_OBSERVER_DISABLED=1
+	;-DCORE_DEBUG_LEVEL=5
 lib_deps =
 	https://github.com/reds6188/esp-console#1.1.0
 	h2zero/NimBLE-Arduino@^1.4.1
